<resources>
    <string name="app_name">Forget Me Not!</string>
    <string name="plantName">Spatiphyllum</string>
    <string name="nothing">Doesn\'t look like anything to me, try adding a plant!</string>
    <string name="genericPlantName">Plant name</string>
    <string name="genericPlantDate">Planting date</string>
    <string name="genericPlantWater">Last watered</string>
    <string name="genericPlantFed">Last fed</string>
    <string name="genericPlantDescription">Notes</string>
    <string name="addButton">Add</string>
    <string name="cancelButton">Cancel</string>
    <string name="okButtonCalendar">OK</string>
    <string name="permissionText">\t Thanks for installing our app! \n For it to work properly, we need the following permissions: \n\n\t Read/Write - So we can access the photographs of your plants
        \n\n\n\t Rejecting any of the permission requests terminates the app.
    </string>
    <string name="waterInterval">Watering interval</string>
    <string name="feedingInterval">Feeding interval</string>
    <string name="deleteAll">Delete all entries</string>
    <string name="okButton">I understand</string>
    <string name="favorite">Favorite?</string>
    <string name="inputPlantName">Input plant name</string>
    <string name="foodIcon">Food icon</string>
    <string name="waterIcon">Water icon</string>
    <string name="save">Save</string>

    <string name="notificationTextWater">Time to water your</string>
    <string name="notificationTitleWater">Watering time!</string>
    <string name="notificationTitleFeeding">Fertilizing time!</string>
    <string name="notificationNotReady">Tomorrow</string>
    <string name="notificationWaterButton">Watered</string>
    <string name="notificationFoodButton">Fertilized</string>
    <string name="channel_name">ForgetMeNot</string>
    <string name="channel_description">Channel to transmit ForgetMeNot notifications</string>

    <string-array name="intervals">
        <item>1 day</item>
        <item>2 days</item>
        <item>3 days</item>
        <item>4 days</item>
        <item>5 days</item>
        <item>6 days</item>
        <item>1 week</item>
        <item>2 weeks</item>
        <item>3 weeks</item>
        <item>1 month</item>
        <item>2 months</item>
        <item>3 months</item>
        <item>4 months</item>
        <item>5 months</item>
        <item>6 months</item>
        <item>Custom</item>
    </string-array>
</resources>
