<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/plantPic"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:scaleType="centerCrop"
                android:src="@android:drawable/ic_menu_camera"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/plantName"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/genericPlantName"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toRightOf="@id/plantPic"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toEndOf="@+id/plantPic"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/waterIcon"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:scaleType="centerInside"
                app:layout_constraintStart_toEndOf="@+id/plantPic"
                app:layout_constraintTop_toBottomOf="@+id/plantName"
                app:srcCompat="@drawable/water" />

            <TextView
                android:id="@+id/lastWatered"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:textColor="@android:color/white"
                android:gravity="center"
                android:text="@string/genericPlantWater"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/waterIcon"
                app:layout_constraintEnd_toEndOf="@+id/plantName"
                app:layout_constraintStart_toEndOf="@+id/waterIcon"
                app:layout_constraintTop_toTopOf="@+id/waterIcon" />

            <ImageView
                android:id="@+id/foodIcon"
                android:layout_width="25dp"
                android:layout_height="25dp"

                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:scaleType="centerInside"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/plantPic"
                app:layout_constraintTop_toBottomOf="@+id/waterIcon"
                app:srcCompat="@drawable/burger" />

            <TextView
                android:id="@+id/lastFed"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:gravity="center"
                android:text="@string/genericPlantFed"
                android:textSize="16sp"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="@+id/foodIcon"
                app:layout_constraintEnd_toEndOf="@+id/lastWatered"
                app:layout_constraintStart_toEndOf="@+id/foodIcon"
                app:layout_constraintTop_toTopOf="@+id/foodIcon" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>